--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "84e418d5",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "95f9ee3f",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
        "└────────────┴───────────┴───────────┴──────────┴──────────┴───────────┴───────────┘"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "0cdca8f8",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "ff2d65f2",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "962818b2",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 2,000,000 rows in 1.41s\n",
+      "Loaded 2,000,000 rows in 1.45s\n",
       "Encoding: utf-8\n"
      ]
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "38e5f644",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "d12354b3",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "8da658e5",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "5804509c",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "5a9103e6",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "b6bed8f3",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "af152767",
    "metadata": {},
    "outputs": [],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "e79bf35e",
    "metadata": {},
    "outputs": [
@@ -328,15 +328,15 @@
      "text": [
       "Total missing: 0\n",
       "Overall missing %: 0.00%\n",
-      "Complete rows: 1000000 (100.00%)\n",
+      "Complete rows: 2000000 (100.00%)\n",
       "\n",
       "Top missing patterns:\n",
       "\n",
       "High missing columns: []\n",
       "Medium missing columns: []\n",
       "\n",
-      "Heatmap matrix shape: 100 x 7\n",
-      "Email missing type: unknown\n"
+      "Heatmap matrix shape: 100 x 12\n",
+      "Email missing type: no_missing\n"
      ]
     }
    ],
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "c6aa6911",
    "metadata": {},
    "outputs": [],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "b1dacd63",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "77c25eae",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "f99dcf7a",
    "metadata": {},
    "outputs": [],
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "id": "42723ae4",
    "metadata": {},
    "outputs": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "3f161feb",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "id": "c3acb7aa",
    "metadata": {},
    "outputs": [],
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "id": "187c6223",
    "metadata": {},
    "outputs": [
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "id": "f76664e3",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,6 @@
       "  KDE computed with 100 points\n",
       "\n",
       "ARR_DELAY normality tests:\n",
-      "  Anderson-Darling: stat=84750.5748\n",
       "  Overall normal: False\n"
      ]
     }
@@ -678,12 +677,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "231b239e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core.analyzer import DataAnalyzer, analyze_dataset, quick_analyze, get_data_quality_score"
+    "from src.core.analyzer import DataAnalyzer, analyze_dataset, quick_analyze, get_data_quality_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "93a0aa64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset: Flight Data\n",
+      "Size: 1,000,000 rows × 7 columns\n",
+      "Memory: 55.31 MB\n",
+      "Column types: {'categorical': 1, 'numeric': 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "quick = quick_analyze(df, dataset_name=\"Flight Data\")\n",
+    "print(f\"Dataset: {quick['dataset_name']}\")\n",
+    "print(f\"Size: {quick['rows']:,} rows × {quick['columns']} columns\")\n",
+    "print(f\"Memory: {quick['memory_mb']:.2f} MB\")\n",
+    "print(f\"Column types: {quick['column_types']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "97c106d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Analysis complete in 19.78s\n",
+      "\n",
+      "Schema: 7 columns analyzed\n",
+      "Statistics: 7 columns\n",
+      "Missing: 0.00% missing\n",
+      "Outliers: 5 columns with outliers\n",
+      "Correlations: 6 top correlations\n",
+      "Distributions: 6 distributions\n"
+     ]
+    }
+   ],
+   "source": [
+    "analyzer = DataAnalyzer(df, dataset_name=\"Flight Data\")\n",
+    "results = analyzer.analyze_all()\n",
+    "\n",
+    "print(f\"\\nAnalysis complete in {results.analysis_time_seconds:.2f}s\")\n",
+    "print(f\"\\nSchema: {len(results.schema['columns'])} columns analyzed\")\n",
+    "print(f\"Statistics: {len(results.statistics['statistics'])} columns\")\n",
+    "print(f\"Missing: {results.missing['overall_missing_percentage']:.2f}% missing\")\n",
+    "print(f\"Outliers: {results.outliers['summary']['columns_with_outliers_count']} columns with outliers\")\n",
+    "print(f\"Correlations: {len(results.correlations['top_correlations'])} top correlations\")\n",
+    "print(f\"Distributions: {results.distributions['summary']['total_numeric_columns']} distributions\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "60bed6af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " DEP_DELAY Analysis:\n",
+      "  Type: DataType.NUMERIC\n",
+      "  Mean: 8.65\n",
+      "  Outliers: 120804\n",
+      "  Distribution: right_skewed\n"
+     ]
+    }
+   ],
+   "source": [
+    "col_analysis = analyzer.get_column_analysis('DEP_DELAY')\n",
+    "print(f\"\\n DEP_DELAY Analysis:\")\n",
+    "print(f\"  Type: {col_analysis['schema']['data_type']}\")\n",
+    "print(f\"  Mean: {col_analysis['statistics']['mean']:.2f}\")\n",
+    "print(f\"  Outliers: {col_analysis['outliers']['iqr_outlier_count']}\")\n",
+    "print(f\"  Distribution: {col_analysis['distribution']['distribution_type']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "061a0fae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Data Quality Score: 98.0/100 (excellent)\n",
+      "  Completeness: 100.0/100\n",
+      "  Outlier Score: 94.9/100\n",
+      "  Schema Score: 100.0/100\n"
+     ]
+    }
+   ],
+   "source": [
+    "quality = get_data_quality_score(df)\n",
+    "print(f\"\\n Data Quality Score: {quality['overall_score']:.1f}/100 ({quality['quality_rating']})\")\n",
+    "print(f\"  Completeness: {quality['completeness_score']:.1f}/100\")\n",
+    "print(f\"  Outlier Score: {quality['outlier_score']:.1f}/100\")\n",
+    "print(f\"  Schema Score: {quality['schema_score']:.1f}/100\")"
    ]
   }
  ],
