--- a/main.ipynb
+++ b/main.ipynb
@@ -798,6 +798,57 @@
     "print(f\"  Outlier Score: {quality['outlier_score']:.1f}/100\")\n",
     "print(f\"  Schema Score: {quality['schema_score']:.1f}/100\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b2fb6de4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "      ██████╗  █████╗ ████████╗ █████╗ ████████╗██╗   ██╗██╗\n",
+      "      ██╔══██╗██╔══██╗╚══██╔══╝██╔══██╗╚══██╔══╝██║   ██║██║\n",
+      "      ██║  ██║███████║   ██║   ███████║   ██║   ██║   ██║██║\n",
+      "      ██║  ██║██╔══██║   ██║   ██╔══██║   ██║   ██║   ██║██║\n",
+      "      ██████╔╝██║  ██║   ██║   ██║  ██║   ██║   ╚██████╔╝██║\n",
+      "      ╚═════╝ ╚═╝  ╚═╝   ╚═╝   ╚═╝  ╚═╝   ╚═╝    ╚═════╝ ╚═╝\n",
+      "\n",
+      "  Data Analysis Toolkit for your Terminal\n",
+      "\n",
+      "⠋ Loading dataset...\n",
+      "\n",
+      "⠋ Detecting schema...\n",
+      "\n",
+      "                                                         Schema                \n",
+      "┌──────────────────────┬────────────┬────────────┬────────────┬──────────┬─────\n",
+      "│ Column               │ DType      │ Type       │ Semantic   │   Unique │ Card\n",
+      "├──────────────────────┼────────────┼────────────┼────────────┼──────────┼─────\n",
+      "│ User_ID              │ String     │ text       │ none       │      939 │ high\n",
+      "│ Loan_ID              │ String     │ text       │ none       │      999 │ high\n",
+      "│ City                 │ String     │ categoric… │ none       │        8 │ low \n",
+      "│ Age                  │ Float64    │ numeric    │ none       │       57 │ low \n",
+      "│ Job                  │ String     │ categoric… │ none       │        8 │ low \n",
+      "│ Education            │ String     │ categoric… │ none       │        5 │ low \n",
+      "│ Marriage_Status      │ String     │ categoric… │ none       │        3 │ low \n",
+      "│ Account_Balance      │ Float64    │ numeric    │ none       │    1,000 │ uniq\n",
+      "│ Loan_Amount          │ Float64    │ numeric    │ currency   │      980 │ uniq\n",
+      "│ Credit_Score         │ Float64    │ numeric    │ none       │      975 │ high\n",
+      "│ Debit_Transactions   │ Float64    │ numeric    │ none       │    1,000 │ uniq\n",
+      "│ Loan_Duration_Months │ Int64      │ numeric    │ none       │       54 │ low \n",
+      "│ Application_Date     │ Date       │ datetime   │ none       │      659 │ high\n",
+      "│ Current_Balance      │ Float64    │ numeric    │ none       │    1,000 │ uniq\n",
+      "└──────────────────────┴────────────┴────────────┴────────────┴──────────┴─────\n",
+      "[OK] Schema analysis complete\n"
+     ]
+    }
+   ],
+   "source": [
+    "!datatui schema data/examples/Loan_dataset.csv"
+   ]
   }
  ],
  "metadata": {
